--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,48 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
+    "@mantine/carousel": "^8.0.2",
+    "@mantine/charts": "^8.0.2",
+    "@mantine/code-highlight": "^8.0.2",
+    "@mantine/core": "^8.0.2",
+    "@mantine/dates": "^8.0.2",
+    "@mantine/dropzone": "^8.0.2",
+    "@mantine/form": "^8.0.2",
+    "@mantine/hooks": "^8.0.2",
+    "@mantine/modals": "^8.0.2",
+    "@mantine/notifications": "^8.0.2",
+    "@mantine/nprogress": "^8.0.2",
+    "@mantine/spotlight": "^8.0.2",
+    "@mantine/tiptap": "^8.0.2",
+    "@react-oauth/google": "^0.12.2",
+    "@tabler/icons-react": "^3.33.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.12.1",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.4",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
