--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,45 @@
 events {}
 
 http {
-    upstream django {
-        server django-app:8000;
+    upstream rails-app {
+        server rails-app:8000;
+    }
+
+    upstream nextjs {
+        server host.docker.internal:3000;
     }
 
     server {
         listen 80;
         server_name localhost;
 
-        location / {
-            proxy_pass http://django;
+        # Rails API（例：APIエンドポイント）
+        location /api/ {
+            proxy_pass http://rails-app;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /static/ {
-            alias /app/static/;
+        # Next.js（SSR or SPA）
+        location / {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
-        location /media/ {
-            alias /app/media/;
+        # Rails の静的ファイル（例: assets:precompile 済）
+        location /assets/ {
+            root /app/public;
+        }
+
+        # もし ActiveStorage を使うなら media 的なエンドポイント（必要なら）
+        location /rails/active_storage/ {
+            proxy_pass http://rails-app;
+            proxy_set_header Host $host;
         }
     }
 }
