--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     upstream rails-app {
-        server rails-app:8000;
+        server rails-api:8000;
     }
 
     upstream nextjs {
@@ -13,7 +13,6 @@ http {
         listen 80;
         server_name localhost;
 
-        # Rails API（例：APIエンドポイント）
         location /api/ {
             proxy_pass http://rails-app;
             proxy_set_header Host $host;
@@ -21,7 +20,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Next.js（SSR or SPA）
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -31,12 +29,10 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Rails の静的ファイル（例: assets:precompile 済）
         location /assets/ {
             root /app/public;
         }
 
-        # もし ActiveStorage を使うなら media 的なエンドポイント（必要なら）
         location /rails/active_storage/ {
             proxy_pass http://rails-app;
             proxy_set_header Host $host;
