--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,41 +1,30 @@
 events {}
 
 http {
-    upstream rails-app {
-        server rails-api:8000;
+  upstream rails-app { server rails-api:8000; }
+  upstream nextjs    { server host.docker.internal:3000; } # or next:3000
+
+  server {
+    listen 80;
+    server_name localhost;
+
+    location ^~ /api/auth/ { proxy_pass http://nextjs; }
+    location ^~ /api/bff/  { proxy_pass http://nextjs; }
+
+    location ^~ /api/ {
+      proxy_pass http://rails-app;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    upstream nextjs {
-        server host.docker.internal:3000;
+    location / {
+      proxy_pass http://nextjs;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
     }
-
-    server {
-        listen 80;
-        server_name localhost;
-
-        location /api/ {
-            proxy_pass http://rails-app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /assets/ {
-            root /app/public;
-        }
-
-        location /rails/active_storage/ {
-            proxy_pass http://rails-app;
-            proxy_set_header Host $host;
-        }
-    }
+  }
 }
