--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -23,12 +23,15 @@ services:
     env_file:
       - backend/.env.production
       - db/.env.db
+      - .env
     depends_on:
       - postgre-db
     networks:
       - backend-net
     ports:
       - "8000:8000"
+    environment:
+      - BFF_SHARED_TOKEN=${BFF_SHARED_TOKEN}
 
   nginx-proxy:
     build:
