--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -19,6 +19,7 @@ services:
     command:
       - bash,-lc,"./start.sh"
     volumes:
+      - ./backend:/app
       - static_volume:/app/public
     env_file:
       - backend/.env.production
