--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -5,7 +5,7 @@ services:
     env_file:
       - db/.env.db
     volumes:
-      - postgres_data:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -20,7 +20,6 @@ services:
       - bash,-lc,"./start.sh"
     volumes:
       - ./backend:/app
-      - static_volume:/app/public
     env_file:
       - backend/.env.production
       - db/.env.db
@@ -40,8 +39,6 @@ services:
       context: .
       dockerfile: nginx/Dockerfile
     container_name: nginx-proxy
-    volumes:
-      - static_volume:/app/static
     depends_on:
       - rails-api
     extra_hosts:
