--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
-    "@mantine/carousel": "^8.0.2",
-    "@mantine/charts": "^8.0.2",
-    "@mantine/code-highlight": "^8.0.2",
-    "@mantine/core": "^8.0.2",
-    "@mantine/dates": "^8.0.2",
-    "@mantine/dropzone": "^8.0.2",
-    "@mantine/form": "^8.0.2",
-    "@mantine/hooks": "^8.3.10",
-    "@mantine/modals": "^8.0.2",
-    "@mantine/notifications": "^8.0.2",
-    "@mantine/nprogress": "^8.0.2",
-    "@mantine/spotlight": "^8.0.2",
-    "@mantine/tiptap": "^8.0.2",
-    "@tabler/icons-react": "^3.33.0",
+    "@mantine/carousel": "8.3.12",
+    "@mantine/charts": "8.3.12",
+    "@mantine/code-highlight": "8.3.12",
+    "@mantine/core": "8.3.12",
+    "@mantine/dates": "8.3.12",
+    "@mantine/dropzone": "8.3.12",
+    "@mantine/form": "8.3.12",
+    "@mantine/hooks": "8.3.12",
+    "@mantine/modals": "8.3.12",
+    "@mantine/notifications": "8.3.12",
+    "@mantine/nprogress": "8.3.12",
+    "@mantine/spotlight": "8.3.12",
+    "@mantine/tiptap": "8.3.12",
+    "@tabler/icons-react": "3.36.1",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
@@ -44,11 +44,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
+    "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.30",
+    "@types/react": "19.2.8",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
