--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
       - run: npm ci
@@ -45,7 +45,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: chatapp_test
         ports:
-          - '5432:5432'
+          - "5432:5432"
         options: >-
           --health-cmd='pg_isready -U postgres'
           --health-interval=10s
@@ -54,7 +54,7 @@ jobs:
 
     env:
       RAILS_ENV: test
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/chatapp_test
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/chatapp_test
       BFF_SHARED_TOKEN: ${{ secrets.BFF_SHARED_TOKEN }}
 
     steps:
@@ -62,7 +62,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: "3.3"
           bundler-cache: true
 
       - run: bundle exec rails db:prepare
