--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,28 +2,41 @@ events {}
 
 http {
   upstream rails-app { server rails-api:8000; }
-  upstream nextjs    { server host.docker.internal:3000; } # or next:3000
+  upstream nextjs    { server host.docker.internal:3000; }
 
   server {
-    listen 80;
+    listen 8443 ssl;
     server_name localhost;
 
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto https;
+
+    # Rails auth を例外で Rails に流す（完全一致が最優先）
+    location = /api/auth/login  { proxy_pass http://rails-app; }
+    location = /api/auth/signup { proxy_pass http://rails-app; }
+    location = /api/auth/logout { proxy_pass http://rails-app; }
+    location = /api/auth/upsert { proxy_pass http://rails-app; }
+
+    # NextAuth（/api/auth/*）は Next.js
     location ^~ /api/auth/ { proxy_pass http://nextjs; }
+
+    # BFF は Next.js
     location ^~ /api/bff/  { proxy_pass http://nextjs; }
 
-    location ^~ /api/ {
-      proxy_pass http://rails-app;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # Rails API
+    location ^~ /api/ { proxy_pass http://rails-app; }
 
+    # Next.js
     location / {
       proxy_pass http://nextjs;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
     }
   }
