--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -29,10 +29,16 @@ services:
     networks:
       - backend-net
     ports:
-      - "8000:8000"
+      - "8443:8443"
+    expose:
+      - "8000"
     environment:
       - BFF_SHARED_TOKEN=${BFF_SHARED_TOKEN}
-      - RAILS_ENV=development
+      - RAILS_ENV=production
+      - PORT=8000
+      - PUMA_BIND_HOST=127.0.0.1
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   nginx-proxy:
     build:
@@ -41,22 +47,10 @@ services:
     container_name: nginx-proxy
     depends_on:
       - rails-api
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    ports:
-      - "80:80"
-    networks:
-      - backend-net
-
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: hiroki020628@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: 0000
-    ports:
-      - "5050:80"
-    networks:
-      - backend-net
+    network_mode: "service:rails-api"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
 
 volumes:
   static_volume:
