--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "bash -lc 'export NODE_EXTRA_CA_CERTS=\"$(mkcert -CAROOT)/rootCA.pem\"; next dev --turbopack'",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -56,6 +56,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "local-ssl-proxy": "^2.0.5",
     "postcss": "^8.5.4",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
