--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - rails-api
     network_mode: "service:rails-api"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ecs.conf:/etc/nginx/ecs.conf:ro
       - ./nginx/certs:/etc/nginx/certs:ro
 
 volumes:
