--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,6 @@
 FROM nginx:1.26.1-alpine
 
-# カスタムnginx.confをコピー
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
+# カスタムecs.confをコピー
+COPY nginx/ecs.conf /etc/nginx/nginx.conf
+
+
