--- a/nginx/ecs.conf
+++ b/nginx/ecs.conf
@@ -26,7 +26,7 @@ http {
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_set_header X-Forwarded-Host  $host;
 
-      proxy_pass http://rails_app;
+      proxy_pass http://127.0.0.1:8000;
     }
   }
 }
